Three modules implemented.

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -57,6 +57,18 @@ tr, td {
   border-radius: 2vh;
   font-size: 4vh;
   cursor: pointer;
+  background-color: white;
+}
+
+.vote-button {
+  width: 30vw;
+  height: 30vw;
+  border: none;
+  border-radius: 2vh;
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  padding: 10vw;
 }
 
 .circle {
