--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -6,20 +6,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @font-face {
   font-family: 'Erlan';
   src: local('Erlan'), url(../static/Erlan.otf) format('opentype');
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -34,15 +23,6 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 tr, td {
@@ -61,14 +41,27 @@ tr, td {
 }
 
 .vote-button {
-  width: 30vw;
-  height: 30vw;
   border: none;
   border-radius: 2vh;
-  cursor: pointer;
   background-color: white;
   color: black;
-  padding: 10vw;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 450px) {
+  .vote-button {
+    width: 33vw;
+    height: 20vh;
+    padding: 2vh;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .vote-button {
+    width: 30vw;
+    height: 30vw;
+    padding: 10vw;
+  }
 }
 
 .circle {
